# Sequence-Models-BiRNN-Seq2Seq-Attention

./: pyproject.toml
01-Bidirectional-RNN/: 1-bidirectional_rnn_theory.ipynb  2-bidirectional_rnn_architecture.ipynb  3-birnn_tensorflow.ipynb
02-Encoder-Decoder/: 01-encoder_decoder_theory.ipynb  02-Encoder_Decoder_Architecture.ipynb
