[project]
name = "sequence-models-birnn-seq2seq-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "tensorflow>=2.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
